--- a/Travel/TravelTableViewCell.xib
+++ b/Travel/TravelTableViewCell.xib
@@ -9,15 +9,66 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TravelTableViewCell" id="KGk-i7-Jjw" customClass="TravelTableViewCell" customModule="Travel" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TravelTableViewCell" rowHeight="149" id="KGk-i7-Jjw" customClass="TravelTableViewCell" customModule="Travel" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="149"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="149"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idf-K7-kxM">
+                        <rect key="frame" x="16.000000000000004" y="15.999999999999998" width="41.333333333333343" height="20.333333333333329"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Rz-2j-eZu">
+                        <rect key="frame" x="16" y="40.333333333333336" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Td9-ND-bP5">
+                        <rect key="frame" x="16.000000000000004" y="69.333333333333329" width="41.333333333333343" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5UQ-jt-CuH">
+                        <rect key="frame" x="65" y="69" width="42" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z9h-6x-aLv">
+                        <rect key="frame" x="178" y="16" width="126" height="117"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="Z9h-6x-aLv" secondAttribute="height" multiplier="14:13" id="0Ic-OA-wE4"/>
+                        </constraints>
+                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGE-Bi-F4y">
+                        <rect key="frame" x="221" y="24" width="75" height="35"/>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Idf-K7-kxM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="3uX-5h-wva"/>
+                    <constraint firstItem="9Rz-2j-eZu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="50P-zo-0vv"/>
+                    <constraint firstAttribute="bottom" secondItem="Z9h-6x-aLv" secondAttribute="bottom" constant="16" id="7Bk-f3-GTg"/>
+                    <constraint firstItem="Td9-ND-bP5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Mr1-Q5-d94"/>
+                    <constraint firstItem="9Rz-2j-eZu" firstAttribute="top" secondItem="Idf-K7-kxM" secondAttribute="bottom" constant="4" id="ZGj-io-5ea"/>
+                    <constraint firstItem="Td9-ND-bP5" firstAttribute="top" secondItem="9Rz-2j-eZu" secondAttribute="bottom" constant="8" id="aYf-Wq-uM8"/>
+                    <constraint firstItem="Idf-K7-kxM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="fVJ-N2-pp2"/>
+                    <constraint firstItem="fGE-Bi-F4y" firstAttribute="top" secondItem="Z9h-6x-aLv" secondAttribute="top" constant="8" id="rFa-N3-AgT"/>
+                    <constraint firstAttribute="trailing" secondItem="Z9h-6x-aLv" secondAttribute="trailing" constant="16" id="sqU-ci-sYR"/>
+                    <constraint firstItem="Z9h-6x-aLv" firstAttribute="trailing" secondItem="fGE-Bi-F4y" secondAttribute="trailing" constant="8" id="tNI-nL-apJ"/>
+                    <constraint firstItem="Z9h-6x-aLv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="zjY-OO-tlH"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="27" y="-33"/>
+            <point key="canvasLocation" x="25.954198473282442" y="3.8732394366197185"/>
         </tableViewCell>
     </objects>
 </document>
