--- a/Travel/TravelTableViewCell.xib
+++ b/Travel/TravelTableViewCell.xib
@@ -17,57 +17,72 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idf-K7-kxM">
-                        <rect key="frame" x="16.000000000000004" y="15.999999999999998" width="41.333333333333343" height="20.333333333333329"/>
+                        <rect key="frame" x="16" y="15.999999999999998" width="146" height="20.333333333333329"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Rz-2j-eZu">
-                        <rect key="frame" x="16" y="40.333333333333336" width="42" height="21"/>
+                        <rect key="frame" x="16" y="40.333333333333336" width="146" height="20.333333333333336"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Td9-ND-bP5">
-                        <rect key="frame" x="16.000000000000004" y="69.333333333333329" width="41.333333333333343" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5UQ-jt-CuH">
-                        <rect key="frame" x="65" y="69" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z9h-6x-aLv">
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="U7t-sX-nfi">
+                        <rect key="frame" x="16" y="68.666666666666671" width="146" height="20.333333333333329"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Td9-ND-bP5">
+                                <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="20.333333333333332"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5UQ-jt-CuH">
+                                <rect key="frame" x="104.66666666666667" y="0.0" width="41.333333333333329" height="20.333333333333332"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z9h-6x-aLv">
                         <rect key="frame" x="178" y="16" width="126" height="117"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Z9h-6x-aLv" secondAttribute="height" multiplier="14:13" id="0Ic-OA-wE4"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGE-Bi-F4y">
-                        <rect key="frame" x="221" y="24" width="75" height="35"/>
+                        <rect key="frame" x="250" y="24" width="46" height="30"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
                     </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Idf-K7-kxM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="3uX-5h-wva"/>
                     <constraint firstItem="9Rz-2j-eZu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="50P-zo-0vv"/>
                     <constraint firstAttribute="bottom" secondItem="Z9h-6x-aLv" secondAttribute="bottom" constant="16" id="7Bk-f3-GTg"/>
-                    <constraint firstItem="Td9-ND-bP5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Mr1-Q5-d94"/>
+                    <constraint firstItem="U7t-sX-nfi" firstAttribute="top" secondItem="9Rz-2j-eZu" secondAttribute="bottom" constant="8" id="9h4-4X-d3e"/>
+                    <constraint firstItem="U7t-sX-nfi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Tb7-Wh-hgG"/>
                     <constraint firstItem="9Rz-2j-eZu" firstAttribute="top" secondItem="Idf-K7-kxM" secondAttribute="bottom" constant="4" id="ZGj-io-5ea"/>
-                    <constraint firstItem="Td9-ND-bP5" firstAttribute="top" secondItem="9Rz-2j-eZu" secondAttribute="bottom" constant="8" id="aYf-Wq-uM8"/>
                     <constraint firstItem="Idf-K7-kxM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="fVJ-N2-pp2"/>
+                    <constraint firstItem="Z9h-6x-aLv" firstAttribute="leading" secondItem="9Rz-2j-eZu" secondAttribute="trailing" constant="16" id="jYv-Zq-npx"/>
+                    <constraint firstItem="Z9h-6x-aLv" firstAttribute="leading" secondItem="U7t-sX-nfi" secondAttribute="trailing" constant="16" id="lP6-QJ-eUs"/>
                     <constraint firstItem="fGE-Bi-F4y" firstAttribute="top" secondItem="Z9h-6x-aLv" secondAttribute="top" constant="8" id="rFa-N3-AgT"/>
                     <constraint firstAttribute="trailing" secondItem="Z9h-6x-aLv" secondAttribute="trailing" constant="16" id="sqU-ci-sYR"/>
                     <constraint firstItem="Z9h-6x-aLv" firstAttribute="trailing" secondItem="fGE-Bi-F4y" secondAttribute="trailing" constant="8" id="tNI-nL-apJ"/>
+                    <constraint firstItem="Z9h-6x-aLv" firstAttribute="leading" secondItem="Idf-K7-kxM" secondAttribute="trailing" constant="16" id="vay-ua-IlG"/>
                     <constraint firstItem="Z9h-6x-aLv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="zjY-OO-tlH"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="descriptionLabel" destination="9Rz-2j-eZu" id="haj-v6-b5j"/>
+                <outlet property="gradeLabel" destination="Td9-ND-bP5" id="0Tt-ed-gLO"/>
+                <outlet property="likeButton" destination="fGE-Bi-F4y" id="xZE-zn-pob"/>
+                <outlet property="photoImageView" destination="Z9h-6x-aLv" id="biP-XT-U0U"/>
+                <outlet property="saveCountLabel" destination="5UQ-jt-CuH" id="SzF-UX-TMD"/>
+                <outlet property="titleLabel" destination="Idf-K7-kxM" id="gpz-Kp-1tI"/>
+            </connections>
             <point key="canvasLocation" x="25.954198473282442" y="3.8732394366197185"/>
         </tableViewCell>
     </objects>
