--- a/Travel/TravelTableViewCell.xib
+++ b/Travel/TravelTableViewCell.xib
@@ -9,68 +9,69 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TravelTableViewCell" rowHeight="149" id="KGk-i7-Jjw" customClass="TravelTableViewCell" customModule="Travel" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="149"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TravelTableViewCell" rowHeight="131" id="KGk-i7-Jjw" customClass="TravelTableViewCell" customModule="Travel" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="525" height="131"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="149"/>
+                <rect key="frame" x="0.0" y="0.0" width="525" height="131"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idf-K7-kxM">
-                        <rect key="frame" x="16" y="15.999999999999998" width="146" height="20.333333333333329"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Rz-2j-eZu">
-                        <rect key="frame" x="16" y="40.333333333333336" width="146" height="20.333333333333336"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="U7t-sX-nfi">
-                        <rect key="frame" x="16" y="68.666666666666671" width="146" height="20.333333333333329"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="BeG-73-jgd">
+                        <rect key="frame" x="16" y="16" width="377" height="73"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Td9-ND-bP5">
-                                <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="20.333333333333332"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idf-K7-kxM">
+                                <rect key="frame" x="0.0" y="0.0" width="377" height="20.333333333333332"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5UQ-jt-CuH">
-                                <rect key="frame" x="104.66666666666667" y="0.0" width="41.333333333333329" height="20.333333333333332"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Rz-2j-eZu">
+                                <rect key="frame" x="0.0" y="26.333333333333336" width="377" height="20.333333333333336"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="U7t-sX-nfi">
+                                <rect key="frame" x="0.0" y="52.666666666666671" width="377" height="20.333333333333329"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Td9-ND-bP5">
+                                        <rect key="frame" x="0.0" y="0.0" width="185" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5UQ-jt-CuH">
+                                        <rect key="frame" x="192" y="0.0" width="185" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                     </stackView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z9h-6x-aLv">
-                        <rect key="frame" x="178" y="16" width="126" height="117"/>
+                        <rect key="frame" x="409" y="16" width="100" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="Z9h-6x-aLv" secondAttribute="height" multiplier="14:13" id="0Ic-OA-wE4"/>
+                            <constraint firstAttribute="width" secondItem="Z9h-6x-aLv" secondAttribute="height" multiplier="1:1" id="0Ic-OA-wE4"/>
+                            <constraint firstAttribute="height" constant="100" id="RCG-1l-f0V"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGE-Bi-F4y">
-                        <rect key="frame" x="250" y="24" width="46" height="30"/>
+                        <rect key="frame" x="455" y="24" width="46" height="30"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="Button"/>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Idf-K7-kxM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="3uX-5h-wva"/>
-                    <constraint firstItem="9Rz-2j-eZu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="50P-zo-0vv"/>
                     <constraint firstAttribute="bottom" secondItem="Z9h-6x-aLv" secondAttribute="bottom" constant="16" id="7Bk-f3-GTg"/>
-                    <constraint firstItem="U7t-sX-nfi" firstAttribute="top" secondItem="9Rz-2j-eZu" secondAttribute="bottom" constant="8" id="9h4-4X-d3e"/>
-                    <constraint firstItem="U7t-sX-nfi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Tb7-Wh-hgG"/>
-                    <constraint firstItem="9Rz-2j-eZu" firstAttribute="top" secondItem="Idf-K7-kxM" secondAttribute="bottom" constant="4" id="ZGj-io-5ea"/>
-                    <constraint firstItem="Idf-K7-kxM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="fVJ-N2-pp2"/>
-                    <constraint firstItem="Z9h-6x-aLv" firstAttribute="leading" secondItem="9Rz-2j-eZu" secondAttribute="trailing" constant="16" id="jYv-Zq-npx"/>
-                    <constraint firstItem="Z9h-6x-aLv" firstAttribute="leading" secondItem="U7t-sX-nfi" secondAttribute="trailing" constant="16" id="lP6-QJ-eUs"/>
+                    <constraint firstItem="BeG-73-jgd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="9BN-Ka-3ed"/>
+                    <constraint firstAttribute="bottom" secondItem="BeG-73-jgd" secondAttribute="bottom" constant="16" id="EUx-hV-w6g"/>
+                    <constraint firstItem="Z9h-6x-aLv" firstAttribute="leading" secondItem="BeG-73-jgd" secondAttribute="trailing" constant="16" id="IE0-mF-Dtl"/>
+                    <constraint firstItem="BeG-73-jgd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ole-gF-gBk"/>
                     <constraint firstItem="fGE-Bi-F4y" firstAttribute="top" secondItem="Z9h-6x-aLv" secondAttribute="top" constant="8" id="rFa-N3-AgT"/>
                     <constraint firstAttribute="trailing" secondItem="Z9h-6x-aLv" secondAttribute="trailing" constant="16" id="sqU-ci-sYR"/>
                     <constraint firstItem="Z9h-6x-aLv" firstAttribute="trailing" secondItem="fGE-Bi-F4y" secondAttribute="trailing" constant="8" id="tNI-nL-apJ"/>
-                    <constraint firstItem="Z9h-6x-aLv" firstAttribute="leading" secondItem="Idf-K7-kxM" secondAttribute="trailing" constant="16" id="vay-ua-IlG"/>
                     <constraint firstItem="Z9h-6x-aLv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="zjY-OO-tlH"/>
                 </constraints>
             </tableViewCellContentView>
@@ -83,7 +84,7 @@
                 <outlet property="saveCountLabel" destination="5UQ-jt-CuH" id="SzF-UX-TMD"/>
                 <outlet property="titleLabel" destination="Idf-K7-kxM" id="gpz-Kp-1tI"/>
             </connections>
-            <point key="canvasLocation" x="25.954198473282442" y="3.8732394366197185"/>
+            <point key="canvasLocation" x="264.8854961832061" y="36.267605633802816"/>
         </tableViewCell>
     </objects>
 </document>
