feat(Cell): 광고를 위한 xib UI 변경

--- a/Travel/ADTableViewCell.xib
+++ b/Travel/ADTableViewCell.xib
@@ -9,32 +9,53 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ADTableViewCell" id="KGk-i7-Jjw" customClass="ADTableViewCell" customModule="Travel" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ADTableViewCell" rowHeight="112" id="KGk-i7-Jjw" customClass="ADTableViewCell" customModule="Travel" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CiD-gu-Jbq">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3zK-PQ-YaQ">
+                        <rect key="frame" x="16" y="16" width="288" height="80"/>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7i2-LQ-g6s">
+                        <rect key="frame" x="139" y="26" width="42" height="60"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Oo-SV-rXN">
+                        <rect key="frame" x="252.66666666666666" y="26" width="41.333333333333343" height="20.333333333333329"/>
+                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="CiD-gu-Jbq" secondAttribute="bottom" id="6qD-cw-Ic8"/>
-                    <constraint firstItem="CiD-gu-Jbq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="JRn-JG-yrs"/>
-                    <constraint firstAttribute="trailing" secondItem="CiD-gu-Jbq" secondAttribute="trailing" id="MFv-Qu-Iwz"/>
-                    <constraint firstItem="CiD-gu-Jbq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="TzF-RS-VrK"/>
+                    <constraint firstAttribute="trailing" secondItem="3zK-PQ-YaQ" secondAttribute="trailing" constant="16" id="2it-Z3-cOy"/>
+                    <constraint firstItem="3zK-PQ-YaQ" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Eat-Zy-VB6"/>
+                    <constraint firstItem="7i2-LQ-g6s" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="dJC-5e-Dlc"/>
+                    <constraint firstItem="8Oo-SV-rXN" firstAttribute="top" secondItem="3zK-PQ-YaQ" secondAttribute="top" constant="10" id="fir-SS-N8R"/>
+                    <constraint firstItem="3zK-PQ-YaQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="kmz-Gk-F5F"/>
+                    <constraint firstItem="3zK-PQ-YaQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="o1h-fo-AnQ"/>
+                    <constraint firstItem="3zK-PQ-YaQ" firstAttribute="trailing" secondItem="8Oo-SV-rXN" secondAttribute="trailing" constant="10" id="oKr-4l-qLY"/>
+                    <constraint firstItem="7i2-LQ-g6s" firstAttribute="top" secondItem="3zK-PQ-YaQ" secondAttribute="top" constant="10" id="qAF-Ft-p9G"/>
+                    <constraint firstItem="3zK-PQ-YaQ" firstAttribute="bottom" secondItem="7i2-LQ-g6s" secondAttribute="bottom" constant="10" id="w08-r7-fDb"/>
+                    <constraint firstAttribute="bottom" secondItem="3zK-PQ-YaQ" secondAttribute="bottom" constant="16" id="wLp-lt-Z1Q"/>
+                    <constraint firstItem="3zK-PQ-YaQ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="xQD-e4-Qt9"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="adLabel" destination="CiD-gu-Jbq" id="njq-qe-Vl3"/>
+                <outlet property="adButton" destination="3zK-PQ-YaQ" id="j2K-Sv-lo6"/>
+                <outlet property="adLabel" destination="8Oo-SV-rXN" id="eqC-Yp-tdy"/>
+                <outlet property="descLabel" destination="7i2-LQ-g6s" id="xbb-JP-jPA"/>
             </connections>
-            <point key="canvasLocation" x="110" y="42"/>
+            <point key="canvasLocation" x="109.9236641221374" y="65.492957746478879"/>
         </tableViewCell>
     </objects>
 </document>
